[package]
name = "vault-program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_program"

[dependencies]
solana-program = "1.16"
spl-token = { version = "3.0.0" , features = [ "no-entrypoint" ]}
borsh = "^0.10"
serde = {version = "^1.0", optional = true }
thiserror = "1.0.65"
bytemuck = { version = "1.4.0" }
arrayref = "0.3.6"

anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["metadata"] }
drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "v2.96.0", features = ["cpi", "mainnet-beta"] }
static_assertions = "1.1.0"