[package]
name = "user_info_program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
name = "user_info_program"

[dependencies]
borsh = "0.10.3"
solana-program = "2"
thiserror = "1.0.64"
drift = { git = "https://github.com/drift-labs/protocol-v2.git", rev = "v2.92.0", features = ["cpi", "mainnet-beta"]}
rustversion = "1.0.17" 
proc-macro2 = "=1.0.79"
