[package]
name = "vault-program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_program"

[dependencies]
solana-program = "1.18.26"
borsh = "1.5.1"
borsh-derive = "1.5.1"
drift_interface = { workspace = true }
thiserror = "1.0.65"
spl-token = { version = "4.0.3", features = ["no-entrypoint"] }
