[package]
name = "vault-program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_program"

[dependencies]
solana-program = "<=1.16"
spl-token = { version = "3.0.0" , features = [ "no-entrypoint" ]}
borsh = "^0.10"
borsh-derive = "^0.10"
drift_interface = { workspace = true }
thiserror = "1.0.65"

